[gd_scene load_steps=7 format=3 uid="uid://cs8qb307piin4"]

[ext_resource type="Texture2D" uid="uid://b8ekb1hjtlobk" path="res://Art/GameFlowers/Dandelion_Full.svg" id="1_jev5x"]
[ext_resource type="Script" path="res://Scripts/UI/Screens/PlantBook/PlantBookInfo.gd" id="1_ysahs"]
[ext_resource type="Texture2D" uid="uid://bjlnl1b575ldi" path="res://Art/UI/PlantBookImageBG.svg" id="2_mwumd"]
[ext_resource type="FontFile" uid="uid://bgsqsl2uc60cx" path="res://Font/dina10px.ttf" id="2_xhfie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x4usf"]
bg_color = Color(0.815686, 0.690196, 0.431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nunc"]
bg_color = Color(0.87451, 0.788235, 0.52549, 1)

[node name="PlantBookInfo" type="Panel"]
offset_right = 977.0
offset_bottom = 1080.0
pivot_offset = Vector2(0, 540)
theme_override_styles/panel = SubResource("StyleBoxFlat_x4usf")
script = ExtResource("1_ysahs")

[node name="FlowerImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 47.0
offset_right = 1027.0
offset_bottom = 840.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_jev5x")
expand_mode = 3
stretch_mode = 5

[node name="FlowerImageBG" type="TextureRect" parent="FlowerImage"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.5
offset_top = -396.5
offset_right = 488.5
offset_bottom = 396.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mwumd")
expand_mode = 3
stretch_mode = 5

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 100)
layout_mode = 0
offset_left = 89.0
offset_top = 799.0
offset_right = 889.0
offset_bottom = 899.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0nunc")
metadata/_edit_group_ = true

[node name="FlowerTitle" type="Label" parent="Panel"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 0
offset_top = 13.0
offset_right = 800.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("2_xhfie")
theme_override_font_sizes/font_size = 80
text = "DANDELION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 140)
layout_mode = 0
offset_left = 89.0
offset_top = 918.0
offset_right = 889.0
offset_bottom = 1058.0
metadata/_edit_group_ = true

[node name="FlowerDescription" type="Label" parent="Panel2"]
custom_minimum_size = Vector2(760, 0)
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 776.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("2_xhfie")
theme_override_font_sizes/font_size = 30
text = "Dandelions close their flowers at night and reopen them in the morning, almost like they're going to sleep and waking up with the sun!"
autowrap_mode = 2
